--- a/workflows/explore_eml/navigate_through_eml.Rmd
+++ b/workflows/explore_eml/navigate_through_eml.Rmd
@@ -22,7 +22,7 @@ View(doc)
 
 The complex EML document is represented in R as as series of named, nested lists. We use lists all the time in R! A `data.frame` is one example of a special kind of list that we use all the time. You may be familiar with the syntax `dataframe$column_name` which allows us to select a particular column of a `data.frame`. Under the hood, a `data.frame` is a named list of vectors with the same length. You select one of those vectors using the `$` operator, which is called the "list selector operator." 
 
-Just like you navigate in a `data.frame`, you can use the `$` operator to navigate through the EML structure. The `$` operator allows you to go deeper into the EML structure and to see what slots are nested within other slots. However, you have to tell R where you want to go in the structure when you use the `$` symbol. For example, if you want to go into the data set of your EML you would use the command ```doc$dataset```. If you want to go to the creators of your data set you would use ```doc$dataset$creator```. Note here that `creators` are contained within `dataset`. If you aren't sure where you want to go, hit the tab button on your keyboard after typing `$` and a list of available locations in the structure will appear (e.g., `doc$<TAB>`):
+Just like you navigate in a `data.frame`, you can use the `$` operator to navigate through the EML structure. The `$` operator allows you to go deeper into the EML structure and to see what elements are nested within other elements. However, you have to tell R where you want to go in the structure when you use the `$` symbol. For example, if you want to view the dataset element of your EML you would use the command ```doc$dataset```. If you want to view the creators of your data set you would use ```doc$dataset$creator```. Note here that `creator` is contained within `dataset`. If you aren't sure where you want to go, hit the tab button on your keyboard after typing `$` and a list of available elements in the structure will appear (e.g., `doc$<TAB>`):
 
 ![](../images/rstudio_autocomplete.png)
 
