Set Jeanette as contact point instead of Jesse
Set Jeanette as contact point for test.arcticdata.io adminship needs

--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -18,7 +18,7 @@ favicon: "favicon.ico"
 
 ## First day to-dos {-}
 
-* Get a tour of the office from Ginger or Jesse
+* Get a tour of the office from Ginger
 * Fill out required paperwork from Ana (room 309)
 * Have Gabriella take your picture (room 309)
 * Set up the remainder of your accounts
@@ -34,8 +34,8 @@ favicon: "favicon.ico"
     + Login to <a href="https://test.arcticdata.io" target="_blank">test.arcticdata.io</a> with your ORCID iD
 * <a href="http://nceas.slack.com" target="_blank">NCEAS Slack</a> - get an invite from <a href="http://slack.nceas.ucsb.edu" target="_blank">slack.nceas.ucsb.edu</a>
     + Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #social
-    + Introduce yourself in #datateam and then use that channel to ask Jesse to make you an administrator on test.arcticdata.io
-* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Jesse in Slack
+    + Introduce yourself in #datateam and then use that channel to ask Jeanette to make you an administrator on test.arcticdata.io
+* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Jeanette in Slack
 * GitHub - if you do not have a public GitHub account already, please register for one <a href="https://github.com/join?source=header-home" target="_blank">here</a>
 * <a href="https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118" target="_blank">Schedule</a> - if you are an intern, fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
 * <a href="https://timekeeping.ucsb.edu/" target="_blank">Electronic Timekeeping</a> - make sure you can log on to electronic timekeeping
