adc_test variable name fix
refer to it as adc_test (convention), not adc

--- a/workflows/explore_eml/navigate_through_eml.Rmd
+++ b/workflows/explore_eml/navigate_through_eml.Rmd
@@ -10,9 +10,9 @@ library(EML)
 ```{r}
 # Need to be in this member node to explore file
 cn_staging <- CNode('STAGING')
-adc <- getMNode(cn_staging,'urn:node:mnTestARCTIC')
+adc_test <- getMNode(cn_staging,'urn:node:mnTestARCTIC')
 
-doc <- read_eml(getObject(adc, "doi:10.18739/A2FS1H"))
+doc <- read_eml(getObject(adc_test, "doi:10.18739/A2FS1H"))
 ```
 
 ```{r, eval = FALSE}
