--- a/workflows/edit_data_packages/get_package_and_eml.Rmd
+++ b/workflows/edit_data_packages/get_package_and_eml.Rmd
@@ -10,6 +10,10 @@ pkg <- get_package(adc_test,
                    file_names = TRUE)
 ```
 
+```{block, type = "note"}
+In all subsequent sections if they ask for  `pid` of the metadata, reasource map or data
+```
+
 After loading the package, you can also load the EML file into R using the following command:
 
 ```{r, eval = FALSE}
