--- a/training/04_editing_eml.Rmd
+++ b/training/04_editing_eml.Rmd
@@ -24,6 +24,11 @@ This chapter will be longest of all 10 sections! This is a reminder to take freq
 ```{r, child = '../workflows/edit_eml/edit_otherentities.Rmd'}
 ```
 
+## Exercise 3a {.exercise}
+
+* Make sure your package from [before](#exercise-2) is loaded into R.
+* Replace the existing `dataTable` with a new `dataTable` object with an `attributelist` and `physical` section you write in R using the above commands.
+
 ```{r, child = '../workflows/edit_eml/edit_spatialvectors.Rmd'}
 ```
 
@@ -84,10 +89,9 @@ In most cases, `qa_package()` will be run just by passing in a member node and t
 qa_package(mn, resource_map_pid)
 ```
 
-## Exercise 3 {.exercise}
+## Exercise 3b {.exercise}
 
-* Make sure your package from [before](#exercise-2) is loaded into R.
-* Replace the existing `dataTable` with a new `dataTable` object with an `attributelist` and `physical` section you write in R using the above commands.
-* Then write, validate, and update your package.
+* Make sure your package from [before](#exercise-3a) is loaded into R.
+* Write, validate, and update your package.
 * Use the <a href = 'https://nceas.github.io/datateam-training/reference/final-checklist-before-notifying-submitter.html' target='_blank'>checklist</a> to review your submission.
 * Make edits where necessary, and publish updates as needed.
