--- a/workflows/edit_data_packages/get_package_and_eml.Rmd
+++ b/workflows/edit_data_packages/get_package_and_eml.Rmd
@@ -11,7 +11,15 @@ pkg <- get_package(adc_test,
 ```
 
 ```{block, type = "note"}
-In all subsequent sections if they ask for  `pid` of the metadata, reasource map or data
+In all subsequent sections, if they ask for the `pid` of the metadata, reasource map or data you can refer to the object from `get_package()`. 
+
+For example, if you assigned the value from `get_package()` as above as `pkg` then you can refer to the following by using the corresponding commands:
+```
+
+```{r, eval= FALSE}
+metadata_pid <-  pkg$metadata
+data_pid <-  pkg$data
+reasource_pid <-  pkg$reasource_map
 ```
 
 After loading the package, you can also load the EML file into R using the following command:
