--- a/reference/reference.Rmd
+++ b/reference/reference.Rmd
@@ -42,6 +42,17 @@ children <- paste0(chapter, sections)
 ```{r, child = children}
 ```
 
+# Nesting Data
+
+```{r, echo = FALSE}
+chapter <- "../workflows/nesting_data/"
+sections <- dir(path = chapter, pattern = ".Rmd$")
+children <- paste0(chapter, sections)
+```
+
+```{r, child = children}
+```
+
 # PI correspondence
 
 ```{r, echo = FALSE}
